logs/Slang/generated/hdlconv/hdlconvertor_p502.sv.log
name: hdlconvertor_p502
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:2:1: error: expected member
checker assert_window2 (
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:3:17: error: expected identifier
logic test_expr,
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:5:1: error: expected declarator
sequence start_event, // Window opens at the completion of the start_event
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:5:9: error: expected ','
sequence start_event, // Window opens at the completion of the start_event
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:5:22: error: expected identifier
sequence start_event, // Window opens at the completion of the start_event
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:6:1: error: expected declarator
sequence end_event,
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:6:9: error: expected ','
sequence end_event,
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:6:20: error: expected identifier
sequence end_event,
                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:8:1: error: expected declarator
event clock = $inferred_clock,
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:8:6: error: expected ','
event clock = $inferred_clock,
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:8:15: error: use of undeclared identifier '$inferred_clock'
event clock = $inferred_clock,
              ^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:8:31: error: expected identifier
event clock = $inferred_clock,
                              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:9:1: error: expected declarator
logic reset = $inferred_disable,
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:9:6: error: expected ','
logic reset = $inferred_disable,
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:9:15: error: use of undeclared identifier '$inferred_disable'
logic reset = $inferred_disable,
              ^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:9:33: error: expected identifier
logic reset = $inferred_disable,
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:10:1: error: expected declarator
string error_msg = "violation",
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:10:7: error: expected ','
string error_msg = "violation",
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:11:1: error: redefinition of 'coverage_level' as different kind of symbol
coverage_level clevel = cover_all // This argument should be bound to an
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:1:40: note: previous definition here
typedef enum { cover_none, cover_all } coverage_level;
                                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:11:15: error: expected ','
coverage_level clevel = cover_all // This argument should be bound to an
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:13:1: error: expected declarator
);
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:14:1: error: language feature not yet supported
default clocking @clock; endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:14:17: error: expected identifier
default clocking @clock; endclocking
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:15:1: error: expected member
default disable iff reset;
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:17:1: error: language feature not yet supported
let start_flag = start_event.triggered;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:17:16: error: expected expression
let start_flag = start_event.triggered;
               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:17:39: error: expected '='
let start_flag = start_event.triggered;
                                      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:18:1: error: language feature not yet supported
let end_flag = end_event.triggered;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:18:14: error: expected expression
let end_flag = end_event.triggered;
             ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:18:35: error: expected '='
let end_flag = end_event.triggered;
                                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:21:21: error: use of undeclared identifier 'end_flag'
if (reset || win && end_flag)
                    ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:23:13: error: use of undeclared identifier 'start_flag'
if (!win && start_flag)
            ^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:29:1: error: language feature not yet supported
property p_window;
^~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:30:38: error: expected expression
start_flag && !window |=> test_expr[+] ##0 end_flag;
                                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:32:1: error: language feature not yet supported
a_window: assert property (p_window) else $error(error_msg);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:33:14: error: expression is not constant
generate if (clevel != cover_none) begin : cover_b
             ^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:33:14: note: reference to non-constant variable 'clevel' is not allowed in a constant expression
generate if (clevel != cover_none) begin : cover_b
             ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:11:16: note: declared here
coverage_level clevel = cover_all // This argument should be bound to an
               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:38:28: error: expected expression
##1 (!end_flag && window) [*]
                           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:38:29: error: expected expression
##1 (!end_flag && window) [*]
                            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:40:1: error: expected expression
) $display("window covered");
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p502.sv:43:1: error: expected member
endchecker : assert_window2
^~~~~~~~~~
